--- a/src/app/components/navbar-top/navbar-top.component.html
+++ b/src/app/components/navbar-top/navbar-top.component.html
@@ -8,12 +8,10 @@
 
     <div class="collapse navbar-collapse" [class.show]="openmenu" id="navbarsExampleDefault">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" routerLinkActive='active'>
-          <a class="nav-link"  routerLink="/login">Login</a>
-        </li>
-        <li class="nav-item" routerLinkActive='active'>
-          <a class="nav-link disabled"  routerLink="/register">Register</a>
-        </li>
+        <li *ngIf="userService.isLoggedIn()" class="nav-item" routerLinkActive='active'><a class="nav-link"  routerLink="/profile">Profile</a></li>
+        <li *ngIf="!userService.isLoggedIn()" class="nav-item" routerLinkActive='active'><a class="nav-link"  routerLink="/login">Login</a></li>
+        <li *ngIf="!userService.isLoggedIn()" class="nav-item" routerLinkActive='active'><a class="nav-link disabled"  routerLink="/register">Register</a></li>
+        <li *ngIf="userService.isLoggedIn()" class="nav-item" ><a class="nav-link active" (click)="onLogoutClick()" >Logout</a></li>
       </ul>
     </div>
   </nav>
